app/styles/custom.scss
.app-button-container {
  display: flex;
  flex-direction: column;
  align-items: stretch;

  & > * {
    margin-right: 0 !important;
    margin-bottom: 8px !important;

    &:last-child {
      margin-bottom: 0 !important;
    }
  }

  @media only screen and (min-width: 600px) {
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;

    & > * {
      margin-right: 4px !important;
      margin-bottom: 0 !important;

      &:last-child {
        margin-right: 0 !important;
      }
    }
  }
}

.app-button-container-stacked {
  display: flex;
  flex-direction: column;
  align-items: stretch;

  & > * {
    margin-bottom: 8px !important;

    &:last-child {
      margin-bottom: 0 !important;
    }
  }
}

.todo-list-item {
  &__title {
    margin: 0;
    line-height: 1.2em;
  }

  &__subtitle {
    margin: 0;
    font-size: 14px;
    line-height: 1.2em;
    color: var(--foreground-2);
  }
}

.todo-headline {
  &__container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
  }

  &__title {
    flex: 1;
  }
}

.notes-display {
  display: block;
  width: 100%;
  white-space: pre-wrap;
}

.title-input {
  display: block;
  width: 100%;
  border: none;
  padding: 0;
  font-size: 1.5rem;
  line-height: 1.15;
  color: black;

  &:focus {
    color: black;
  }
}

.click-to-edit {
  cursor: pointer;
}

.list-detail {
  & > * {
    display: none;

    &:last-child {
      display: block;
    }
  }

  @media only screen and (min-width: 992px) {
    display: flex;
    flex-direction: row;
    align-items: flex-start;

    & > * {
      display: block;
      flex: 1;
    }
  }
}

/* https://css-tricks.com/overriding-default-button-styles/ */
.unstyled-button {
  background: none;
  border: none;
  padding: 0;
  text-align: left;

  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
}

.icon-button {
  @extend .unstyled-button;
  height: 40px;
  padding: 8px;
  margin: 0 6px;
}

.overflow-hidden {
  overflow: hidden;
}

.category-button {
  border: 0;
  background: none;
  text-align: left;
  margin: 0;
  padding: 0;
}

.icon {
  display: inline-block;
  width: 24px;
  height: 24px;
  vertical-align: middle;
  background-color: #555;

  mask-size: 24px 24px;
  -webkit-mask-size: 24px 24px;
  mask-position: center;
  -webkit-mask-position: center;
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
}

.list-group-item-action.active .icon,
.btn.btn-primary .icon,
md-toolbar .icon {
  background-color: white;
}

